now using video information to fill in some of the visual stuff, and there is a video synced with the data! yay!

--- a/webVisualization/index.html
+++ b/webVisualization/index.html
@@ -51,5 +51,9 @@ path.lineTrajectory {
   <span id="min-time">00:00:00.01</span>
     <input type="range" name="points" min="1" max="1500" step="1" value="1" id="slider-time" style="width:783px">
   <span id="max-time">00:00:00.00</span>
+  <video width="940" height="500" playsinline id="soccervid" muted>
+    <source src="soccer-cut.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
 </body>
 </html>
